add api for tutor to manage the test
