# src/main/java/com/quemistry/quiz_ms/controller/model/QuizAttemptRequest.java
@@ -1,0 +1,14 @@
+package com.quemistry.quiz_ms.controller.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class QuizAttemptRequest {
+  private Integer attemptOption;
+}
