# src/main/java/com/quemistry/quiz_ms/model/TestEntity.java
@@ -1,5 +1,6 @@
 package com.quemistry.quiz_ms.model;
 
+import static com.quemistry.quiz_ms.model.TestStatus.*;
 import static jakarta.persistence.GenerationType.IDENTITY;
 
 import jakarta.persistence.*;
@@ -29,12 +30,22 @@ public class TestEntity {
 
   private Date createdOn;
 
+  private String createdBy;
+
+  private Date startedOn;
+
+  private String startedBy;
+
+  private Date completedOn;
+
+  private String completedBy;
+
   private Date updatedOn;
 
   public static TestEntity create(String tutorId, String title) {
     Date now = new Date();
     return TestEntity.builder()
-        .status(TestStatus.IN_PROGRESS)
+        .status(DRAFT)
         .tutorId(tutorId)
         .title(title)
         .createdOn(now)
@@ -42,8 +53,17 @@ public class TestEntity {
         .build();
   }
 
-  public void complete() {
-    this.status = TestStatus.COMPLETED;
+  public void start(String tutorId) {
+    this.status = IN_PROGRESS;
+    this.startedBy = tutorId;
+    this.startedOn = new Date();
+    this.updatedOn = new Date();
+  }
+
+  public void complete(String tutorId) {
+    this.status = COMPLETED;
+    this.completedBy = tutorId;
+    this.completedOn = new Date();
     this.updatedOn = new Date();
   }
 }
